--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-CLIENT_ID="http://183190053042-3c56e73neh7e7eve8j5uti91dasih4tn.apps.googleusercontent.com"
-CLIENT_URL=https://localhost:3000/
-CLIENT_SECRET="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"
+CLIENT_SECRET=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
+CLIENT_ID=43098381981-8g736h5lmqbbbs313m1dts052534uf5u.apps.googleusercontent.com
