--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "google-auth-library": "^9.4.2",
+    "jade": "^1.11.0",
+    "morgan": "^1.10.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pug": "^3.0.2"
   }
 }
