.env added to .gitignore

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 CLIENT_SECRET=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
 CLIENT_ID=43098381981-8g736h5lmqbbbs313m1dts052534uf5u.apps.googleusercontent.com
+API_KEY='923c67d3-2d75-48d2-94e8-5b92332bcb6d'
+API_URL='https://api.frill.co/v1'
